Fix the visibility of the border on the featured image block

--- a/src/wp-content/themes/twentytwenty/style.css
+++ b/src/wp-content/themes/twentytwenty/style.css
@@ -3268,6 +3268,37 @@ figure.wp-block-gallery.alignfull {
 	margin-bottom: 0;
 }
 
+/* Block: Featured Image ------------------------------ */
+
+/*
+* Set a default border style so that borders show on the front when
+* the image only has a border color or border width set.
+*/
+.wp-block-post-featured-image :where([style*=border-width]),
+.wp-block-post-featured-image :where(.has-border-color) {
+	border-style: solid;
+}
+
+.wp-block-post-featured-image :where([style*="border-top-width"]),
+.wp-block-post-featured-image :where([style*="border-top-color"]) {
+	border-top-style: solid;
+}
+
+.wp-block-post-featured-image :where([style*="border-right-width"]),
+.wp-block-post-featured-image :where([style*="border-right-color"]) {
+	border-right-style: solid;
+}
+
+.wp-block-post-featured-image :where([style*="border-bottom-width"]),
+.wp-block-post-featured-image :where([style*="border-bottom-color"]) {
+	border-bottom-style: solid;
+}
+
+.wp-block-post-featured-image :where([style*="border-left-width"]),
+.wp-block-post-featured-image :where([style*="border-left-color"]) {
+	border-left-style: solid;
+}
+
 /* Block: Pullquote -------------------------- */
 
 /* STYLE: DEFAULT */
